@@ -1,3 +1,4 @@
+from __future__ import with_statement
 from alembic import context
 from sqlalchemy import engine_from_config
 from logging.config import fileConfig
