@@ -1,3 +1,4 @@
+from __future__ import with_statement
 from tests import clear_staging_env, staging_env, _sqlite_testing_config, sqlite_db, eq_, ne_
 from alembic import command, util
 from alembic.script import ScriptDirectory
